# flight-watch

./: .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/: .env.example  README.md  app_simple_gcs.py  date_utils.py  dockerfile  firestore_logic.py  gcp_auth.py  gcs_data_service_simple.py  requirements.txt  scheduler.py  sendgrid_logic.py  start.sh  unsubscribe_tokens.py
backend/app/: README.md
backend/src/flightwatch_backend/: __init__.py  api.py  date_utils.py  firestore_logic.py  gcp_auth.py  gcs_data_service_simple.py  paths.py  scheduler.py  sendgrid_logic.py
backend/tests/: README.md  conftest.py  test_api.py  test_scheduler.py
docs/: PRD.md  README.md  api-contract.md  architecture.html  architecture.md  database.md  decisions.md  flight-api.md  qa-devops.md  roadmap.md  scheduler-notifications.md  tech-stack.md
docs/meetings/: 2026-01-30.md  2026-02-04.md  2026-02-06.md
frontend/: README.md  simple_search.html
frontend/src/: README.md
frontend/tests/: README.md
infra/: .env.deploy.example  README.md  bootstrap.sh  deploy_cloud_run.sh
scripts/: .gitignore  README.md  generate_flight_data.py
scripts/flight_fetch/: amadeus_test.py  batch_flight_collector.py  flight_README.md  flight_fetcher.py  requirements.txt  test_setup.py
scripts/flight_fetch_serpapi/: batch_flight_collector_serpapi.py  requirements.txt
scripts/model_pipeline/: README.md  amadeus_client.py  baselines.py  bts_client.py  config.py  pipeline.py  requirements.txt  storage.py  transform.py
scripts/model_pipeline/.claude/: settings.local.json
